# SqliteServer

./: .gitignore  100.py  CMakeLists.txt  README.md  README.txt  benchmark.js  connectionpool.cpp  connectionpool.hpp  database.db  dockerfile  ps-1000.ps1  sqlserver.cpp  test.py  test_post.py  threadpool.cpp  threadpool.hpp
.cache/clangd/index/: Assertion.h.4A4CDA7C0E1D67FC.idx  Backup.cpp.6F6A55549CAB377B.idx  Backup.h.7DA51BF2837598C9.idx  Column.cpp.2438823FB983F41C.idx  Column.h.FA1264C02644017F.idx  Database.cpp.FFE840C7C99E12BA.idx  Database.h.677A87CDDD158869.idx  Exception.cpp.2D0CA214D98AA612.idx  Exception.h.A23A1D7205EF71D8.idx  SQLiteCpp.h.651851C034723B40.idx  SQLiteCppExport.h.5897C0C2F1BAFF54.idx  Savepoint.cpp.C88674720013F0DF.idx  Savepoint.h.45FE40099734652E.idx  Statement.cpp.09442B4A763255B3.idx  Statement.h.01C064BA9D055678.idx  TinySHA1.hpp.5331A2D8CF0B8357.idx  Transaction.cpp.D5A0E8B8BA88C825.idx  Transaction.h.4F08A236639F2C7F.idx  Utils.h.033C7DEDDE5188DB.idx  app.h.2AE00ED977CCE068.idx  ci_map.h.02AE972EA8C078E8.idx  common.h.0ADC5555FDFDC8A9.idx  compression.h.4A09BBF6E8A4CA18.idx  connectionpool.cpp.D23C46AA6AA18665.idx  connectionpool.hpp.1B9F18459375FFC2.idx  crow.h.E416C675A90BA00C.idx  http_connection.h.A0E068DE27470862.idx  http_parser_merged.h.82355D7C8BFC78D5.idx  http_request.h.D3367882769459F3.idx  http_response.h.7B56BA599B21E443.idx  http_server.h.010C35ACEC354A24.idx  json.h.7667B4FE5DC95A3B.idx  logging.h.B4F61CB3C517A2B0.idx  middleware.h.F10517549EEE4A33.idx  middleware_context.h.CF445F1D001C2291.idx  mime_types.h.5797D6E244DF57F3.idx  multipart.h.C001F1331AF96DBF.idx  mustache.h.D47EA4E563EA288E.idx  parser.h.CECCFDA739A651BB.idx  query_string.h.51335240B30E51EE.idx  (+13 more)
api/: README.md  README.txt  benchmark_r.sh  benchmark_w.sh  del_patient.json  get_patient.json  login.json  patient.json  search.json  update_patient.json  user.json  user1-invalid.json  user1-invalidmail.json  user1.json
cmake/: CPM.cmake
deprecated/: README.md  benchmark.js  benchmark2-gzip.js  dummy_patient2.json  dummy_patient3.json  dummy_patient4.json  gzip_test.py  plan.yml  print_ip.py
docker/: docker-compose.yml  dockerfile.api  dockerfile.pq  entrypoint.sh  init.sql
src/: api_v1_routes.cpp  api_v1_routes.hpp  auth.hpp  connectionpool.cpp  connectionpool.hpp  database.cpp  database.hpp  databaseconnectionpool.cpp  databaseconnectionpool.hpp  databasecontroller.cpp  databasecontroller.hpp  databasehandler.cpp  databasehandler.hpp  patientcontroller.cpp  patientcontroller.hpp  restcontroller.cpp  restcontroller.hpp  resthandler.cpp  resthandler.hpp  resthelper.cpp  resthelper.hpp  server.cpp  sqlserver.cpp  threadpool.cpp  threadpool.hpp  tokenizer.cpp  tokenizer.hpp  usercontroller.cpp  usercontroller.hpp  usercontrollerimpl.hpp
tests/: benchmark.js  benchmark2-deflate.js  benchmark2-gzip.js  benchmark2-raw.js  benchmark2.js  benchmark3.js  benchmark4.js  dummy_patient.json  dummy_patient2.json  dummy_patient4.json  fuck.py  send_dummy_patient_to_api.sh  test_get_conc.py  test_post.py
